2002-01-03  Darin Adler  <darin@bentspoon.com>

	* libnautilus-private/nautilus-icon-container.c:
	(start_rubberbanding):
	Use GnomeCanvasRect instead of EelCanvasRect. We can redo the
	EelCanvasRect optimization if we want to, but it should really
	be put into libgnomecanvas.
	
	* components/music/common.c:
	* components/music/nautilus-music-view.c:
	* libnautilus-private/nautilus-customization-data.c:
	* libnautilus-private/nautilus-desktop-file-loader.c:
	* libnautilus-private/nautilus-directory-async.c:
	* libnautilus-private/nautilus-directory.c:
	* libnautilus-private/nautilus-file.c:
	* src/file-manager/fm-desktop-icon-view.c:
	* src/file-manager/fm-icon-view.c:
	* src/nautilus-property-browser.c:
	* src/nautilus-sidebar-title.c:
	* src/nautilus-window.c:
	Remove lots of unneeded includes, including all cases of
	including the locale-sensitive <ctype.h>.

2002-01-03  Darin Adler  <darin@bentspoon.com>

	* libnautilus-private/nautilus-global-preferences.c:
	(nautilus_global_preferences_init):
	* libnautilus-private/nautilus-sidebar-functions.c:
	(sidebar_panel_make_preference_key):
	* libnautilus-private/nautilus-sidebar-functions.h:
	Remove some help sidebar panel remnants.

2002-01-03  Michael Meeks  <michael@ximian.com>

	* components/image-viewer/io-png.c
	(image_save): disable png stuff.

2001-01-03  Michael Meeks  <michael@ximian.com>

	* configure.in: bump requirements on bonobo to get
	something that works well.

2002-01-03  John Fleck <jfleck@inkstain.net>

	* help/nautilus-quick-reference/C/index.html
	removing duplicate width tags, fixing
	http://bugzilla.gnome.org/show_bug.cgi?id=47433

2002-01-02  Darin Adler  <darin@bentspoon.com>

	* configure.in:
	Explicitly depend on librsvg instead of getting it through eel.

2002-01-03  Anders Carlsson  <andersca@gnu.org>

	* src/nautilus-component-adapter-factory.c: Fix warnings by
	putting #ifdef GNOME2_CONVERSION_COMPLETE around unused functions
	and variables.
