@@ -1,15 +1,20 @@
 For tasks outside the porting effort, we track them as bugs in
-http://bugzilla.gnome.org.
+http://bugzilla.gnome.org. For the porting effort, please let
+darin@bentspoon.com know what you are working on.
 
-- Make closing a window work (Bonobo fix needed).
-- Get list view working.
+- Make closing a window work (Bonobo fixes needed?).
+- Port list view to GtkTreeView and then go to eel and remove
+  EelCList, EelList, and EelListColumnTitle.
+- Port tree sidebar panel to GtkTreeView and then go to eel and
+  remove EelCTree.
+
+- Visit all the GNOME2_CONVERSION_COMPLETE and fix each issue
+  (details forthcoming)
+
 - Visit all the destroy and move things into finalize or dispose
   and make them callable twice as appropriate.
 - Change things that use destroy handlers to use weak references
   instead.
+
 - Figure out why we get NULL font problems in Pango when the progress
   dialog comes up.
-
-- Get EelLabel working and switch back to it on the sidebar.
-- Get rid of the direct freetype use and switch to using
-  Pango instead.
